tests/NormalTests/paczka1/fuzzy1/96109782.err
Error in line 8: A165 S67g 25,4
Error in line 11: 9AdHewYjQc0 A290 85,5
Error in line 4: A165 S363 15,2
